<resources>
    <string name="app_name">Buck It</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_match">Discovery</string>
    <string name="title_activity_inspire">Inspire</string>
    <string name="animTimeFast">100</string>
    <string name="animTime">200</string>
    <string name="animTimeSlow">400</string>
    <string name="transit">items</string>
    <string name="search_hint">I want to&#8230;</string>
    <string name="buckit_uncomp">BUCK ITS</string>
    <string name="buckit_comp">COMPLETED</string>
    <string name="messages">MESSAGES</string>
    <string name="matched">MATCHED</string>
    <string name="social">FRIENDS</string>
    <string name="profile">PROFILE</string>
    <string name="similar">NEAR ME</string>
    <string name="profile_edit">View my profile</string>
    <string name="checked_edit_text">Tap to add a story</string>
    <string name="checked_post">Post</string>
    <string name="completed_subtitle">%1$s completed \"%2$s\"</string>
    <string name="completed_title">COMPLETED</string>
    <string name="add_person">Add someone</string>
    <string name="add_confirm"><b>%1$s</b> is now on your Buck It List.</string>

    <string name="card_title"><b>%1$s</b>, <b>%2$s</b></string>
    <string name="match_empty">This Buck It is unique.</string>
    <string name="no_messages">No messages</string>

    <string name="suggestion">Suggestions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">"Sign In "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_non_match_password">This password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>

    <string name="no_data">:(</string>
    <string name="no_data_subtitle">No Buck It\'s Added</string>
    <string name="new_buckit">Create a new Buck It</string>
    <string name="add_new_buckit">Create and add \"<b>%1$s</b>\"</string>
    <string name="repeat"><b>%1$s</b> is already on your Buck It List</string>
    <string name="no_data_completed">Check off some Buck Its today</string>

    <string name="enable_discovery">Enable Discovery</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="name">What\'s your name?</string>
    <string name="age">What\'s your age?</string>
    <string name="pic">Add a picture</string>
    <string name="permission_denied">Buck It needs to be able to access storage to upload a profile picture</string>
    <string name="permission_denied_location">Buck It needs to be able to access location to show you people near you</string>
    <string name="age_minimum">You must be at least 18</string>
    <string name="share_text"><b>%1$s</b> on Buck It. Download it today: https://arteryapp.com</string>
    <string name="share_title">I Checked Something off my Buck It List</string>

    <string name="profile_view">View my profile</string>
    <string name="no_profile_text">I\'m new here</string>
    <string name="no_data_social">No stories yet</string>
    <string name="profile_none">No Profile</string>
    <string name="create_profile">Tap to create one</string>
    <string name="no_data_near_me">No one\'s near by right now</string>

    <string name="edit">Edit</string>
    <string name="change_pic">Upload a profile picture</string>
    <string name="done">Done</string>
    <string name="update_soon">Uploading&#8230;your profile picture will be updated soon</string>
    <string name="enable_location">Enable location</string>
    <string name="settings_messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="discoverable">Discoverable</string>
    <string name="search_settings">Search Settings</string>
    <string name="completed_buck_its">Completed Buck Its</string>

    <string name="banner_ad_unit_id">ca-app-pub-2731350002741004/2336892776</string>
    <string name="app_id">ca-app-pub-2731350002741004~8383426377</string>
</resources>
