<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="6dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        card_view:cardUseCompatPadding="true"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardBackgroundColor="@android:color/white"
        android:background="@android:color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:transitionName="item_title"
        android:id="@+id/card"
        >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/frame">

            <CheckBox android:id="@+id/checkbox"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:focusable="false"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="center_vertical"
                android:layout_marginTop="18dp"
                />

            <TextView android:id="@+id/match_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:maxLines="3"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:textColor="@color/text"
                android:typeface="normal"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false">

            <com.lorentzos.flingswipe.SwipeFlingAdapterView
                android:id="@+id/swipecards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:rotation_degrees="16"
                app:max_visible="4"
                app:min_adapter_stack="6"/>

            <ImageView
                android:id="@+id/match_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enable_location"
                android:text="@string/enable_location"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:padding="8dp"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/match_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_empty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <Button
                android:id="@+id/enable_discovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_discovery"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:transitionName="button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:clipChildren="false">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight=".2"
                    android:clipChildren="false"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_gravity="center"
                    android:clipChildren="false"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/circle_size"
                        android:layout_height="@dimen/circle_size"
                        android:id="@+id/chat_circle"
                        android:layout_margin="8dp"
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        android:background="@drawable/circle" />

                    <ImageButton
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:id="@+id/chat_button"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:elevation="8dp"
                        android:visibility="invisible"
                        android:background="@android:color/transparent"
                        android:src="@drawable/chat"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_weight=".3"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:clipChildren="false">

                    <ImageView
                        android:id="@+id/next_circle"
                        android:layout_width="@dimen/circle_size"
                        android:layout_height="@dimen/circle_size"
                        android:layout_margin="8dp"
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        android:background="@drawable/circle" />

                    <ImageButton
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:id="@+id/next_button"
                        android:scaleType="fitCenter"
                        android:layout_gravity="center"
                        android:elevation="8dp"
                        android:visibility="invisible"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_next"/>

                </FrameLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight=".2"
                    android:clipChildren="false"/>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>